tests/baselines/reference/templateStringInWhileES6.errors.txt
templateStringInWhileES6.ts(1,8): error TS2869: Truthiness test of this kind of expression appears unintentional


==== templateStringInWhileES6.ts (1 errors) ====
    while (`abc${0}abc`) {
           ~~~~~~~~~~~~
!!! error TS2869: Truthiness test of this kind of expression appears unintentional
        `def${1}def`;
    }